Attempting to fix responsiveness on mobile

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     -moz-transition: width 1s ease;
     transition: width 1s ease;
 }
-@media(max-width: 600px){
+@media screen and (max-width: 600px){
 	.content-box{
 		width: 70%;
 		height: 175px;
@@ -22,7 +22,7 @@
 		font-size:30px;
 	}
 }
-@media(min-width:601px){
+@media screen and (min-width:601px){
 	.content-box{
 		width: 45%;
 		height: 250px;
@@ -31,7 +31,7 @@
 		font-size: 40px;
 	}
 }
-@media(min-width:850px){
+@media screen and (min-width:850px){
 	.content-box{
 		width: 30%;
 		height:275px;
